--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,7 +1,7 @@
 <nav>
     <p-menubar [model]="items" id="nav-menubar">
       <ng-template pTemplate="start">
-        <img src="assets/img/logo.png" height="40" class="mr-2" />
+        <img src="assets/img/logo_2.png" height="40" class="mr-2" />
       </ng-template>
       <ng-template pTemplate="end">
         <input type="text" pInputText placeholder="Search" class="w-full" />
